# esoinn_text

./: .gitignore  CMakeLists.txt  README
include/adapt_learn_rate/: AbstractAdaptLearnRate.hpp  AdaptLearnRateSoinn.hpp
include/container/: StaticArray.hpp
include/examples/: read_data.hpp
include/logger/: logger.hpp
include/neural_network/: Common.hpp  ESoinn.hpp
include/neuron/: AbstractNeuron.hpp  ESoinnNeuron.hpp
include/prep_data/: read_dictionary.hpp
include/weight_vector/: AbstractWeightVector.hpp  WeightVectorPhrase.hpp
src/: CMakeLists.txt
src/adapt_learn_rate/test/: CMakeLists.txt  adapt_learn_rate_test.cpp  main.cpp
src/container/test/: CMakeLists.txt  container_test.cpp  main.cpp
src/examples/: CMakeLists.txt  esoinn_iris.cpp
src/neural_network/: CMakeLists.txt  ESoinn.cpp
src/prep_data/: CMakeLists.txt  prep_data_words.cpp
src/weight_vector/: CMakeLists.txt  WeightVectorPhrase.cpp
